commented out text-align: center from prompt container and margin left from yellow box so cursor would align correctly on different screen sizes.

--- a/styles.css
+++ b/styles.css
@@ -16,14 +16,14 @@ body {
   margin-top: 15px;
   background-color: rgb(245, 245, 245);
   height: 130px;
-  text-align: center;
+  /* text-align: center; */
   
 }
 
 #yellow-block {
   position: absolute;
   margin-top: 10px;
-  margin-left: 65px;
+  /* margin-left: 65px; */
   width: 15px;
   height: 15px;
   background-color: rgba(133, 133, 133, 0.5);
